# viaxcli

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  zcc
.cargo/: config.toml
.github/workflows/: release.yml
api/: Cargo.toml
api/src/: api.rs  auth.rs  fun.rs  int.rs  lib.rs
config/: Cargo.toml
config/src/: config.rs
mac_sdk/: MacOSX12.3.sdk.tar.xz
query/: Cargo.toml  build.rs
query/src/: lib.rs
schema/: Cargo.toml  build.rs
schema/src/: lib.rs
schemas/: pe.graphql  schema.graphql
src/: api.rs  cli.rs  config.rs  main.rs
