[package]
name = "viax"
version = "0.0.1-rc1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
# serde = { version = "1.0.217", features = ["derive"] }
confy = "^0.6"
directories = "6.0.0"
# serde_with = "3.12.0"
# config = { version = "0.15.4", features = ["ini"] }
# cynic = { version = "3", features = ["http-reqwest-blocking"] }
# reqwest = { version = "0.12.12", features = ["json", "blocking", "multipart"] }
viax-schema = { path = "schema" }
query = { path = "query" }
api = { path = "api" }
viax-config = { path = "config" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }

# [build-dependencies]
# cynic-codegen = { version = "3" }
