[package]
name = "viax"
version = "0.0.1-rc1"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
confy = "^0.6"
directories = "6.0.0"
viax-schema = { path = "schema" }
query = { path = "query" }
api = { path = "api" }
viax-config = { path = "config" }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
