[package]
name = "viax"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
confy = "^2.0"
directories = "6.0.0"
viax-schema = { path = "schema" }
query = { path = "query" }
api = { path = "api" }
viax-config = { path = "config" }
rpassword = "7.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.68", features = ["vendored"] }
