[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
cynic = { version = "3" }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
reqwest = { version = "0.12.12", features = ["json", "blocking", "multipart"] }
zip-extensions = "0.8.1"
zip = "6.0.0"
viax-schema = { path = "../schema" }
query = { path = "../query" }
viax-config = { path = "../config" }
